--- a/README.Rmd
+++ b/README.Rmd
@@ -4,21 +4,24 @@ output: github_document
 
 # Overview
 
-This package provides a dataset of Arkansas legislation from 2001-2019 for data exploration, natural language processing, and graph analysis. The dataset is structured as a nested tibble containing distinct legislative sessions, nested by cycle (every two years) and session type. Before we can take a look, we'll need to load a couple of packages from the tidyverse:
+This package provides a dataset of Arkansas legislation from 2001-2019 for data exploration, natural language processing, and graph analysis. The dataset is structured as a nested tibble containing distinct legislative sessions, nested by cycle (every two years) and session type. 
 
-```{r, warning = F, message=F}
+Before we can take a look, we'll need to load a couple of packages from the tidyverse that will help us access the nested tibbles:
+
+```{r libraries, warning = F, message=F}
 
 library(aRlegislation)
 library(dplyr)
 library(ggplot2)
-library(lubridate)
-library(tidyr)
+library(tidyr) # needed for nest/unnest operations
+library(tidygraph)
+library(ggraph)
 
 ```
 
 Now, we can take a look at the structure of the dataset:
 
-```{r}
+```{r legislation_head}
 
 head(legislation)
 
@@ -27,26 +30,24 @@ head(legislation)
 There are three different datasets for each legislative cycle and session:
 
 * acts, which contains act number, bill number, title, subtitle, text, and partisanship
-* sponsors, which contains demographic information about lawmakers such as chamber, political party, and district
+* lawmakers, which contains demographic information about elected senators and representatives such as chamber, political party, and district
 * sponsorship, which is a simple table containing only act number and sponsor name in a manner suitable for creating network graphs
 
 Below, we'll take a look at each type of nested tibble, and we'll provide an example or two of analyses that can be performed using each type of tibble.
 
-## Sponsors
+## Lawmakers
 
-For purposes of this dataset, the term "sponsor" refers to one or more lawmakers that propose an enacted bill during a legislative session. While a sponsor can be an individual lawmaker or a committee, this table excludes committees. Here's what the structure of one of the sponsors tibbles looks like: 
+For purposes of this dataset, the term "sponsor" refers to one or more lawmakers or committees that propose an enacted bill during a legislative session. This table contains demographic information about lawmakers, so it excludes committees -- hence the name. Here's what the structure of one of the lawmakers tibbles looks like: 
 
-```{r}
+```{r lawmakers_head}
 
-head(legislation$sponsors[[1]])
+head(legislation$lawmakers[[1]])
 
 ```
 
-As an example, we can look at the political makeup of the lawmakers in each regular-session legislative chamber over time pretty easily:[^sponsorsNote]
+As an example, we can look at the political makeup of the lawmakers in each regular-session legislative chamber over time pretty easily:
 
-[^sponsorsNote]: To keep things simple, we'll just look at regular legislative sessions for now. Also, committees have been excluded from this graph because they don't necessarily belong to a specific chamber.
-
-```{r cycle-chamber-party, fig.width=7.5, fig.height=3}
+```{r cycle-chamber-party_plot, fig.width=7.5, fig.height=3}
 
 # Use party-related colors
 party.colors <- c(
@@ -60,13 +61,12 @@ party.colors <- c(
 )
 
 legislation %>%
-  filter(grepl("R", session)) %>%
-  unnest(sponsors) %>%
-  filter(! grepl("Budget|Committee|Management|Senate|Efficiency|Insurance|Agencies", sponsor)) %>%
+  filter(grepl("R", session)) %>% # regular sessions only
+  unnest(lawmakers) %>%
   count(cycle, session, party, chamber) %>%
   ggplot(aes(y = n, x = cycle, color = party)) +
-    geom_point(size = 2) +
-    geom_line(size = 1) +
+    geom_point(size = 2.5) +
+    geom_line(size = 3) +
     facet_wrap(~ chamber) +
     scale_x_continuous(
       breaks = seq(from = 2001, to = 2019, by = 4), 
@@ -74,41 +74,21 @@ legislation %>%
     ) +
     scale_color_manual(values = party.colors) +
     labs(
-      x = "Legislative Cycle",
-      y = "No. of Legislators",
+      x = "",
+      y = "",
       title = "Political Makeup of the Arkansas Legislature"
-    )
+    ) +
+    theme(legend.position = "none")
 
 ```
 
 This graph shows a very pronounced switch in the makeup of both chambers of the Arkansas legislature between 2009 and 2017. 
 
-## Sponsorship
-
-Sponsorship refers to individual laws that each lawmaker presents to the legislative chamber. Some bills have a single sponsor, while others have many. Bills can be sponsored by lawmakers in one or both chambers, or by a committee belonging to neither chamber. Since the number of lawmakers/committees who sponsor laws can change, this table is a two-column layout with a unique combination of act and sponsor per row:
-
-```{r}
-
-head(legislation$sponsorship[[1]])
-
-```
-
-The purpose of this simple layout is to facilitate graph analysis. The sponsor table contains additional information about vertices (where vertices are lawmakers), and the sponsorship table contains information about the edges.
-
-A simple example from the 2019 regular session illustrates:
-
-```{r}
-
-### New tidygraph code
-
-```
-
-
 ## Acts
 
 The acts tibbles contain the text of laws passed during each cycle/session, along with a little bit of metadata about the acts: 
 
-```{r}
+```{r acts_head}
 
 head(legislation$acts[[1]])
 
@@ -120,15 +100,17 @@ The act text has been lightly processed such that it is still human-readable, es
 `r legislation$acts[[1]]$text[[200]]`
 </blockquote>
 
+The act titles, subtitles, and text are suitable for natural language processing analysis, although examples of such are beyond the scope of this introduction.
+
 The metadata includes a calculated partisan value based on the political party of the bill sponsors, as follows:
 
 * If any sponsor is a committee, the partisan value is set to committee
-* If all sponsors are in the same party, the partisan value is set to the value of that party
-* If the sponsors are of mixed political parties, the partisan value is set to bipartisan
+* If all sponsors are lawmakers in the same party, the partisan value is set to the value of that party
+* If the sponsors are lawmakers of mixed political parties, the partisan value is set to bipartisan
 
 The partisan value allows us to look at trends about bipartisanship over time, as follows:
 
-```{r, fig.width=7.5, fig.height=3.5}
+```{r bipartisanship_plot, fig.width=7.5, fig.height=3.5}
 
 legislation %>%
   unnest(acts) %>%
@@ -158,6 +140,125 @@ legislation %>%
 
 We can see here that the total number of bipartisan acts has been declining over time.
 
+## Sponsorship
+
+Sponsorship refers to individual laws that each lawmaker or committee presents to the legislative chamber. Some bills have a single sponsor, while others have many. Bills can be sponsored by lawmakers in one or both chambers, by a committee belonging to neither chamber, or some combination thereof. Since the number of lawmakers/committees that sponsor laws can change, this table is a two-column layout with a unique combination of act and sponsor per row:
+
+```{r sponsorship_head}
+
+head(legislation$sponsorship[[1]])
+
+```
+
+The purpose of this simple layout is twofold. First, we want to be able to look at summary statistics about the number of sponsors per act. For instance, we can look at the total number of sponorships by each political party over time, which tells us how much credit each party's lawmakers claim for legislation:
+
+```{r sponsorship_plot, fig.width=7.5, fig.height=3}
+
+legislation %>%
+  unnest(sponsorship) %>%
+   left_join(
+    legislation %>% unnest(lawmakers),
+    by = c("cycle", "session", "sponsor")
+  ) %>%
+  filter(!is.na(chamber)) %>% # No committee acts
+  count(cycle, party, chamber, act) %>% # counts all sponsors who signed onto acts
+  count(cycle, party, chamber) %>% # counts acts themselves
+  ggplot(aes(y = n, x = cycle, color = party)) +
+    geom_point(size = 2.5) +
+    geom_line(size = 3) +
+    facet_wrap(~ chamber) +
+    scale_x_continuous(
+      breaks = seq(from = 2001, to = 2019, by = 4), 
+      minor_breaks = seq(from = 2001, to = 2019, by = 2)
+    ) +
+    scale_color_manual(values = party.colors) +
+    labs(
+      title = "Acts Sponsored by Party",
+      x = "", y = ""
+    )
+
+```
+
+This plot shows an unexpected result for the House —- as seen above, the Democratic representatives lost the majority in the House in 2013, but they still sponsored more acts than Republican representatives.
+
+The second purpose of the sponsorship tibble to facilitate graph analysis. The sponsorship table contains information about graph edges, and the sponsor table contains additional information about graph vertices (that is, where vertices are lawmakers and not committees).
+
+We'll illustrate how the graph works with an example from the 2019 regular session. This is a little more in-depth than the previous examples, since we'll need to generate a to-from relationship from the raw data about sponsorships. The pipeline is a little on the long side, so here are the steps:
+
+* Link the raw sponsorship data with the sponsor table to generate a list of lawmakers and their party affiliations
+* Rename columns to indicate this is the "from" tibble
+* Repeat step 1
+* Rename columns to indicate this is the "to" tibble 
+* Join the from and to tibbles 
+* Filter out any duplicate records, since there's no directionality to sponsorship
+* Count the number of links between lawmakers
+* Identify whether those links are bipartisan or not
+* Create the graph
+* Add metadata to the nodes so we can color them appropriately
+* Use uppercase for lawmakers in the Senate and lowercase for those in the House
+
+```{r sponsorship_graph}
+
+selected.cycle <- 27
+
+sponsorship_graph <- legislation$sponsorship[[selected.cycle]] %>%
+  right_join( # Right join, because we are excluding committees
+      legislation$lawmakers[[selected.cycle]] %>%
+        select(sponsor, party),
+        by = "sponsor"
+  ) %>%
+  rename(from = sponsor, from.party = party) %>%
+  left_join(
+    legislation$sponsorship[[selected.cycle]] %>% 
+      right_join( # Right join, because we are excluding committees
+        legislation$lawmakers[[selected.cycle]] %>%
+        select(sponsor, party, chamber),
+        by = "sponsor"
+    ) 
+    %>% rename(to = sponsor, to.party = party), 
+    by = "act"
+  ) %>% 
+  select(from, from.party, to, to.party, act) %>%
+  filter(from < to) %>% # filters duplicate rows; links are unordered
+  group_by(from, from.party, to, to.party) %>%
+  count(from, from.party, to, to.party) %>% 
+  ungroup() %>%
+  mutate(
+    wt = log(n + 1),
+    partisan = ifelse(to.party == from.party, to.party, "bipartisan")
+  ) %>%
+  arrange(desc(wt)) %>%
+  as_tbl_graph() %>%
+  activate(nodes) %>%
+  left_join(
+    legislation$lawmakers[[selected.cycle]] %>%
+        select(sponsor, party, chamber),
+        by = c("name" = "sponsor")
+  ) %>%
+  mutate(name = ifelse(chamber == "Senate", toupper(name), tolower(name)))
+
+sponsorship_graph
+
+```
+
+With the graph constructed from the table of links, we can now visualize the links between the lawmakers: 
+
+```{r sponsorship-graph_plot, fig.width=10, fig.height=5}
+
+sponsorship_graph %>%
+  mutate(degree = centrality_degree(weights = n)) %>%
+  ggraph(layout = "fr") +
+    geom_node_text(aes(label = name, color = party), size = 2.5) +
+    geom_edge_diagonal(aes(edge_color = partisan, edge_width = wt / 10), edge_alpha = 0.005) +
+    scale_color_manual(values = party.colors) +
+    scale_edge_color_manual(values = party.colors) +
+    theme_graph() +
+    theme(legend.position = "none")
+
+```
+
 # Future Plans
+
+The legislature meets once a year, plus special sessions, so the dataset can be updated as each additional session concludes.
 
 This dataset is essentially an aggregation of distinct datasets across each cycle/session of the legislature. This works well to allow us to see trends across cycles/sessions, but it doesn't give much visibility into how individual lawmakers act as they get re-elected, gain experience, and perhaps graduate from House to Senate as term limits force them out of office. As such, entity resolution of lawmakers across cycles/sessions will likely be the focus of the next major version of this dataset. 
