Add demos with SVM/NN analysis
This commit adds several .Rmd files in the demo directory that were used to train machine learning models on corruption. The results of these calculations are in the data-raw directory; there are subdirectories for search-grids and results-scores (results-models is also a directory but is excluded from git, as the file sizes are too large at this time). results-scores has an images subdirectory that help visualize the hyperparameter tuning for the SVM/NN analysis. This commit also changed the markdown format of the vignettes to github_document.

--- a/vignettes/acts.Rmd
+++ b/vignettes/acts.Rmd
@@ -1,13 +1,16 @@
 ---
 title: "Acts"
-output: 
-  rmarkdown::html_vignette:
-    keep_md: TRUE
+output:
+  github_document:
+    html_preview: false
 vignette: >
   %\VignetteIndexEntry{Acts}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
+
+
+This vignette examines the structure of the `acts` tibbles contained within the `legislation` dataset and displays the partisanship of the Arkansas Legislature over time as an exmample use case. 
 
 ```{r, include = FALSE}
 knitr::opts_chunk$set(
@@ -16,14 +19,14 @@ knitr::opts_chunk$set(
 )
 ```
 
-```{r setup}
-suppressPackageStartupMessages(library(aRlegislation))
-suppressPackageStartupMessages(library(dplyr))
-suppressPackageStartupMessages(library(tidyr)) # needed for nest/unnest operations
-suppressPackageStartupMessages(library(ggplot2))
+```{r setup, message=F, warning=F}
+library(aRlegislation)
+library(dplyr)
+library(tidyr) # needed for nest/unnest operations
+library(ggplot2)
 ```
 
-The acts tibbles contain the text of laws passed during each cycle/session, along with a little bit of metadata about the acts: 
+The `acts` tibbles contain the text of laws passed during each cycle/session, along with a little bit of metadata about the acts: 
 
 ```{r acts_head}
 head(legislation$acts[[1]])
