--- a/vignettes/acts.Rmd
+++ b/vignettes/acts.Rmd
@@ -1,8 +1,7 @@
 ---
 title: "Acts"
 output:
-  github_document:
-    html_preview: false
+  github_document
 vignette: >
   %\VignetteIndexEntry{Acts}
   %\VignetteEngine{knitr::rmarkdown}
