--- a/vignettes/lawmakers.Rmd
+++ b/vignettes/lawmakers.Rmd
@@ -1,8 +1,7 @@
 ---
 title: "Lawmakers"
 output:
-  github_document:
-    html_preview: false
+  github_document
 vignette: >
   %\VignetteIndexEntry{Lawmakers}
   %\VignetteEngine{knitr::rmarkdown}
